--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta description="Democracy & Dissent - Stop The Wheel Productions" >
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Democracy&Dissent</title>
     <!-- MDB icon -->
