--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,135 +1,32 @@
-body {
-    background-color: #F4F4F4;
-    font-family: 'Montserrat', sans-serif;
-}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
 
-.title {
-    font-family: 'Ms Madi', cursive;
+body {
+    background: rgb(108,107,120);
+    background: linear-gradient(90deg, rgba(108,107,120,1) 0%, rgba(161,161,176,1) 46%, rgba(48,104,177,1) 100%);
+    font-family: 'Josefin Sans', sans-serif;
+    color: black;
 }
 
 .intro-bg {
-    background-image: linear-gradient(to bottom, #22313F, #F4F4F4);
-    padding-top: 70px;
-    padding-bottom: 70px;
-}
-
-.bg {
-    background: url("https://cdn.pixabay.com/photo/2013/07/13/11/26/film-158157__340.png") no-repeat center center fixed;
+    background: url(../img/filmMaker.png)
+    no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    width: 100%;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    color: #cea135;
+    padding-top: 170px;
+    padding-bottom: 170px;
 }
 
-.media-intro {
-    background: url("../img/media-intro-img.png") no-repeat center center fixed;
+.journal-bg {
+    background: url(https://mdbcdn.b-cdn.net/img/new/standard/city/053.webp)
+    no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    width: 100%;
-    padding-top: 90px;
-    padding-bottom: 90px;
-    color: white;
-}
-
-.block {
-    background-color: black;
-    color: white;
-    padding-top: 70px;
-}
-
-@media(max-width: 730px){
-    .bg {
-        background: url("https://cdn.pixabay.com/photo/2013/07/13/11/26/film-158157__340.png") no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        width: 100%;
-        padding-top: 60px;
-        padding-bottom: 30px;
-        color: #cea135;
-    }
-    .media-intro {
-        background: url("../img/media-intro-img.png") no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        width: 100%;
-        padding-top: 60px;
-        padding-bottom: 60px;
-        color: white;
-    }
-}
-
-@media(max-width:750px){
-    .bg {
-        background: none;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        width: 100%;
-        padding-top: 60px;
-        padding-bottom: 60px;
-        color: #cea135;
-    }
-}
-
-.max {
-    max-height: 250px;
-    max-width: 300px;
-}
-
-.project-max {
-    max-height: 350px;
-    max-width: 350px;
-}
-
-.line {
-    color: darkgoldenrod;
-    border-bottom: 6px solid;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 22px;
-}
-
-.media-line {
-    border-bottom: 2px solid black;
-    width: 100%;
-    margin-top: 15%;
-    margin-bottom: 15%;
-}
-
-.footer-line {
-    color: #f4f4f4;
-    border-bottom: 2px solid;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 22px;
-}
-
-.box {
-    border: 9px solid darkgoldenrod;
-    width: 170px;
-    height: 60px;
-}
-
-.space {
-    margin-top: 90px;
-}
-
-.section-space {
-    margin-top: 90px;
-    margin-bottom: 90px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
