--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
     </div>
   </main>
 
-  <div class="container" style="margin-top: 70px;">
+  <div class="container" style="margin-top: 70px; margin-bottom: 70px;">
     <div class="row">
       <div class="col-md-6 p-2 text-white">
         <h1 data-mdb-toggle="animation"
@@ -111,7 +111,7 @@
     </div>
   </div>
 
-  <div class="container" style="margin-top: 90px;">
+  <div class="container" style="margin-top: 90px; margin-bottom: 70px;">
     <div class="row">
       <div class="col-md-6 p-2">
         <img src="https://images.unsplash.com/photo-1612544409025-e1f6a56c1152?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
