--- a/views/films.ejs
+++ b/views/films.ejs
@@ -20,7 +20,7 @@
              data-mdb-animation="fade-in-left"
              data-mdb-animation-delay="200"
              class="col-md p-2">
-            <img src="img/films-1.png" class="img-fluid rounded" alt="img" />
+            <img src="img/films-intro-img.png" class="img-fluid rounded" alt="img" />
         </div>
         <div data-mdb-toggle="animation"
              data-mdb-animation-start="onLoad"
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div class="container text-white">
+<div class="container text-white" style="margin-bottom: 70px;">
     <div class="row mt-5">
         <div data-mdb-toggle="animation"
              data-mdb-animation-start="onLoad"
@@ -79,7 +79,7 @@
              data-mdb-animation="fade-in"
              data-mdb-animation-delay="200"
              class="col-md p-2">
-            <img src="img/911photo.png" class="img-fluid max" alt="img" style="width: 100%; max-height: 290px;" />
+            <img src="img/film-content-img.png" class="img-fluid max" alt="img" style="width: 100%; max-height: 290px;" />
         </div>
         <div data-mdb-toggle="animation"
              data-mdb-animation-start="onLoad"
