--- a/views/journals.ejs
+++ b/views/journals.ejs
@@ -13,8 +13,8 @@
             <div class="container mt-5">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Journals</li>
+                        <li class="breadcrumb-item" style="color: white!important;"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active text-white" aria-current="page">Journals</li>
                     </ol>
                 </nav>
                 <%if(loggedIn){ %>
