--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/films">Films</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blogs.html">Blogs</a>
+                    <a class="nav-link" href="/journals">Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Coming Soon...</a>
