--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -11,7 +11,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Ms+Madi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
     <!-- MDB ESSENTIAL -->
     <link rel="stylesheet" href="/css/mdb.min.css" />
     <!-- MDB PLUGINS -->
