--- a/views/createProject.ejs
+++ b/views/createProject.ejs
@@ -14,6 +14,7 @@
 
         <!--Card content-->
         <div class="card-body px-lg-5 pt-0">
+            <h1 class="mt-3 mb-3">New Project</h1>
 
             <!-- Form -->
             <form class="text-center" style="color: #757575;" action="/project/store" method="post" enctype="multipart/form-data">
