--- a/views/journal.ejs
+++ b/views/journal.ejs
@@ -19,7 +19,7 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
         <li class="breadcrumb-item"><a href="/journals">Journals</a></li>
-        <li class="breadcrumb-item active" aria-current="page">
+        <li class="breadcrumb-item text-white" aria-current="page">
           <%= blogpost.title %>
         </li>
       </ol>
