--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/films">Films</a>
@@ -32,6 +32,33 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
+                <% if(!loggedIn) { %>
+                    <li class="nav-item dropdown">
+                        <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdownMenuLink"
+                                role="button"
+                                data-mdb-toggle="dropdown"
+                                aria-expanded="false"
+                        >
+                            <i class="far fa-user"></i>
+                            <!--                        <i class="far fa-user-circle"></i>-->
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li>
+                                <a class="dropdown-item" href="/auth/login">Login</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="/auth/register">Register</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">Support</a>
+                            </li>
+                        </ul>
+                    </li>
+                <% } %>
+                <% if(loggedIn){%>
                 <li class="nav-item dropdown">
                     <a
                             class="nav-link dropdown-toggle"
@@ -41,44 +68,21 @@
                             data-mdb-toggle="dropdown"
                             aria-expanded="false"
                     >
-                        <i class="far fa-user"></i>
-                        <!--                        <i class="far fa-user-circle"></i>-->
+                        <i class="far fa-user-circle"></i>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li>
-                            <a class="dropdown-item" href="#">Login</a>
+                            <a class="dropdown-item" href="/auth/logout">Logout</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Register</a>
+                            <a class="dropdown-item" href="/posts/new">New Post</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="/createProject">New Project</a>
                         </li>
                     </ul>
                 </li>
-                <!--          <li class="nav-item dropdown">-->
-                <!--            <a-->
-                <!--                    class="nav-link dropdown-toggle"-->
-                <!--                    href="#"-->
-                <!--                    id="navbarDropdownMenuLink"-->
-                <!--                    role="button"-->
-                <!--                    data-mdb-toggle="dropdown"-->
-                <!--                    aria-expanded="false"-->
-                <!--            >-->
-                <!--            <i class="far fa-user-circle"></i>-->
-                <!--            </a>-->
-                <!--            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">-->
-                <!--              <li>-->
-                <!--                <a class="dropdown-item" href="#">Login</a>-->
-                <!--              </li>-->
-                <!--              <li>-->
-                <!--                <a class="dropdown-item" href="#">Register</a>-->
-                <!--              </li>-->
-                <!--              <li>-->
-                <!--                <a class="dropdown-item" href="#">Journals</a>-->
-                <!--              </li>-->
-                <!--            </ul>-->
-                <!--          </li>-->
+                <%} %>
             </ul>
             <span class="navbar-text">
           <!-- Dropdown -->
