--- a/views/project.ejs
+++ b/views/project.ejs
@@ -19,7 +19,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
             <li class="breadcrumb-item"><a href="/projects">Projects</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
+            <li class="breadcrumb-item active text-white" aria-current="page">
                 <%= project.title %>
             </li>
         </ol>
