--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,7 +11,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Projects</li>
+            <li class="breadcrumb-item text-white" aria-current="page">Projects</li>
         </ol>
     </nav>
     <%if(loggedIn){ %>
