--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,6 +32,11 @@
             <input type="text" id="username" name="username" class="form-control mb-3 md-textarea" placeholder="Username">
         </div>
 
+        <div class="md-form">
+            <!-- First name -->
+            <input type="text" id="roles" name="roles" class="form-control mb-3 md-textarea" placeholder="Enter Your Role ID here if known">
+        </div>
+
         <!-- E-mail -->
         <div class="md-form">
             <input type="email" id="email" name="email" class="form-control mb-3 md-textarea mb-4" placeholder="E-mail">
