--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -27,6 +27,9 @@
                     <a class="nav-link" href="/journals">Blogs</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/books">Books</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/lindbergh911">Lindbergh</a>
                 </li>
                 <li class="nav-item">
