--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -3,11 +3,11 @@
     <div class="container p-4">
         <div class="row">
             <div class="col-lg-6 col-md-12 mb-4">
-                <h5 class="mb-3" style="letter-spacing: 2px; color: #818963;">footer content</h5>
+                <h5 class="mb-3" style="letter-spacing: 2px; color: #818963;">
+                    StopTheWheelProductions
+                </h5>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                    molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                    voluptatem veniam, est atque cumque eum delectus sint!
+                    You may call the speech, “Lindbergh’s 9/11.” In the speech Lindbergh accused three groups of leading America to war, FDR, the English and, against the advice of his wife, Anne, he named  the Jews for pushing America to enter the Second World War.
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
@@ -28,19 +28,21 @@
                 </ul>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
-                <h5 class="mb-1" style="letter-spacing: 2px; color: #818963;">opening hours</h5>
-                <table class="table" style="color: #ffffff; border-color: #666;">
-                    <tbody>
-                    <tr>
-                        <td>Mon - Fri:</td>
-                        <td>8am - 9pm</td>
-                    </tr>
-                    <tr>
-                        <td>Sat - Sun:</td>
-                        <td>8am - 1am</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <h5 class="mb-3" style="letter-spacing: 2px; color: #818963;">links</h5>
+                <ul class="list-unstyled mb-0">
+                    <li class="mb-1">
+                        <a href="#!" style="color: #ffffff;">Frequently Asked Questions</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="#!" style="color: #ffffff;">Delivery</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="#!" style="color: #ffffff;">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#!" style="color: #ffffff;">Where we deliver?</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
