--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="/lindbergh911">Lindbergh</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
                 <% if(!loggedIn) { %>
                     <li class="nav-item dropdown">
