--- a/views/lindbergh911.ejs
+++ b/views/lindbergh911.ejs
@@ -18,7 +18,7 @@
     </div>
 </header>
 
-<main style="margin-top: 50px;">
+<main style="margin-top: 50px; margin-bottom: 70px;">
     <div class="container">
 
         <p class="lead">
@@ -73,10 +73,6 @@
         </p>
     </div>
 </main>
-
-<div class="container section-space">
-
-</div>
 
 <%- include('layouts/footer') -%>
 </body>
