--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,9 +9,9 @@
 
 <div class="container mt-5 text-center mb-5">
     <!-- Default form login -->
-    <form class="text-center border border-light p-5" method="post" action="/users/login">
+    <form class="text-center p-2" method="post" action="/users/login">
 
-        <p class="h4 mb-4">Sign in</p>
+        <h1 class="h1 mb-4">Sign in</h1>
 
         <!-- Email -->
         <input type="text" required id="username" name="username" class="form-control mb-4" placeholder="Username">
