--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,9 +8,9 @@
 <!-- Navbar -->
 
 
-<div class="container p-5 mt-2 text-center mb-5">
+<div class="container p-2 mt-5 text-center mb-5">
     <!-- Default form register -->
-    <form class="text-center border border-light p-5" action="/users/register" method="post">
+    <form class="text-center p-2" action="/users/register" method="post">
 
         <h1 class="h1 mb-4">Sign up</h1>
         <p class="lead">
